<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Home">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/notif"
                android:src="@drawable/notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/metropolis_semibold"
                android:text="@string/notif"
                android:textColor="@color/putih" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="100dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/home"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/metropolis_semibold"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/home"
                android:textColor="@color/putih" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginStart="265dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bulat"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:contentDescription="@string/setting"
                android:src="@drawable/setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/metropolis_semibold"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/setting"
                android:textColor="@color/putih" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:background="@drawable/slide"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.88" >
        <ImageView
            android:contentDescription="@string/slide1"
            android:layout_width="130dp"
            android:layout_height="7dp"
            android:src="@drawable/slide1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>